- bugfix: internal messages were emitted to whatever file had fd2 when
  rsyslogd ran in forked mode (as usual!)
  Thanks to varmojfekoj for the patch
---------------------------------------------------------------------------
Version 3.22.1 [v3-stable] (rgerhards), 2009-04-??
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs
- bugfix: potential segfault issue when multiple $UDPServerRun directives
  are specified. Thanks to Michael Biebl for helping to debug this one.
- relaxed GnuTLS version requirement to 1.4.0 after confirmation from the
  field that this version is sufficient
---------------------------------------------------------------------------
Version 3.22.0 [v3-stable] (rgerhards), 2009-04-21
This is the first stable release that includes the full functionality
of the 3.21.x version tree.
- bugfix: $InputTCPMaxSessions config directive was accepted, but not
  honored. This resulted in a fixed upper limit of 200 connections.
- bugfix: the default for $DirCreateMode was 0644, and as such wrong.
  It has now been changed to 0700. For some background, please see
  http://lists.adiscon.net/pipermail/rsyslog/2009-April/001986.html
- bugfix: ompgsql did not detect problems in sql command execution
  this could cause loss of messages. The handling was correct if the
  connection broke, but not if there was a problem with statement
  execution. The most probable case for such a case would be invalid
  sql inside the template, and this is now much easier to diagnose.
---------------------------------------------------------------------------
Version 3.21.11 [BETA] (rgerhards), 2009-04-03
- build system improvements contributed by Michael Biebl - thx!
- all patches from 3.20.5 incorporated (see it's ChangeLog entry)
---------------------------------------------------------------------------
Version 3.21.10 [BETA] (rgerhards), 2009-02-02