@@ -1,3 +1,2 @@
 rsyslogd: CONFIG ERROR: there are no active actions configured. Inputs will run, but no output whatsoever is created. [try http://www.rsyslog.com/e/2103 ]
 rsyslogd: EMERGENCY CONFIGURATION ACTIVATED - fix rsyslog config file!
-rsyslogd: End of config validation run. Bye.
