@@ -1,6 +1,12 @@
 - bugfix: internal messages were emitted to whatever file had fd2 when
   rsyslogd ran in forked mode (as usual!)
   Thanks to varmojfekoj for the patch
+- small enhancement: config validation run now exits with code 1 if an
+  error is detected. This change is considered important but small enough
+  to apply it directly to the stable version. [But it is a border case,
+  the change requires more code than I had hoped. Thus I have NOT tried
+  to actually catch all cases, this is left for the current devel
+  releases, if necessary]
 ---------------------------------------------------------------------------
 Version 3.22.1 [v3-stable] (rgerhards), 2009-04-??
 - bugfix: light and full delay watermarks had invalid values, badly
